<resources>
    <string name="Content_copied">Content copied</string>
    <string name="D_all">Delete all record(s)</string>
    <string name="Del">Do you want to delete selected record(s)?</string>
    <string name="History">History</string>
    <string name="Ofeatures">Other features</string>
    <string name="OfeaturesAnswer">You can copy/share scanned QR code with other applications, furthermore you can save the generated QR code in the gallery and share it as well.</string>
    <string name="QRGenerator">QR Generator</string>
    <string name="QRScanner">QR Scanner</string>
    <string name="Scan_qr">Scan</string>
    <string name="Settings">Settings</string>
    <string name="Share_via">Share via</string>
    <string name="Store_in_gallery">Store</string>
    <string name="URL">URL</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abort_action">Abort</string>
    <string name="abort_action_url">Abort</string>
    <string name="about">About</string>
    <string name="about_affiliation">In affiliation with</string>
    <string name="about_author">Authors:</string>
    <string name="about_author_names">Christopher Beckmann, Bassel Hanna, Philipp Rack, Tobias Länge</string>
    <string name="about_author_string">%s and contributors.</string>
    <string name="about_libraries">Used libraries:</string>
    <string name="action_about">About</string>
    <string name="action_clear">Clear History</string>
    <string name="action_help">Help</string>
    <string name="action_open">Open</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="activity_enter_toast_missing_data">No data</string>
    <string name="activity_history_list_item_qr_image_descriptor">QR Code</string>
    <string name="activity_result_toast_error_cant_load">Something went wrong when loading the result.</string>
    <string name="activity_result_toast_saved">Saved to history.</string>
    <string name="activity_result_type_uri">URL</string>
    <string name="activity_scanner_flashlight_off">Flashlight Off</string>
    <string name="activity_scanner_flashlight_on">Flashlight On</string>
    <string name="activity_scanner_permission_needed_explanation">The app needs the camera permission in order to scan QR codes.</string>
    <string name="address">Address</string>
    <string name="all_records">Do you want to delete all record(s)?</string>
    <string name="android_version_does_not_support_feature">Your Android version does not support this feature.</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">QR Scanner</string>
    <string name="app_name_long">Privacy Friendly QR Scanner</string>
    <string name="app_version">null</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="back">Back</string>
    <string name="barcode_format">Format</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="canncelled_scan">You cancelled the scanning</string>
    <string name="cannot_clear">The history is already empty</string>
    <string name="cannot_connect_to_encrypted_wifi_without_password">No connection to an encrypted WiFi network can be established without a password.</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="choose_action">Proceed</string>
    <string name="choose_action_url">Proceed</string>
    <string name="city">City</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close">Close</string>
    <string name="code_generation_error">No code could be generated.</string>
    <string name="code_stored">QR code stored in gallery</string>
    <string name="company">Company</string>
    <string name="confirmation">Confirmation</string>
    <string name="conform_url">Please confirm, that you checked the link.</string>
    <string name="content_copied">Content copied</string>
    <string name="copied_to_clipboard">Copied to clipboard.</string>
    <string name="copy">Copy</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="country">Country</string>
    <string name="define_zxingandroidembedded" />
    <string name="delete">delete</string>
    <string name="delete_all">Delete all contents</string>
    <string name="delete_content">Are you sure you want to delete contents?</string>
    <string name="delete_history">Do you want to delete the history?</string>
    <string name="delete_items">Delete items</string>
    <string name="description_Mms">The QR-Code you scanned contains an MMS.</string>
    <string name="description_contact">The QR-Code you scanned contains contact information. In order to <i>import</i> it into your address book, click Proceed.</string>
    <string name="description_email">The QR-Code you scanned contains an email address. In order to <i>send an email</i> or <i>add it to a contact</i>, click Proceed.</string>
    <string name="description_product">The code you scanned contains a product code. In order to <i>search the web</i> for product information, click Proceed.</string>
    <string name="e_mail_address">E-mail address</string>
    <string name="firstname">Firstname</string>
    <string name="generated_code_image_explanation">Note: The code shown here was generated based on the content of the scanned code and may therefore look different. However, the data it contains is the same.</string>
    <string name="github"><a href="https://github.com/SecUSo/privacy-friendly-qr-scanner">GitHub-Repo</a></string>
    <string name="help">Help</string>
    <string name="help_category_example">The scanning does not work, what can I do?</string>
    <string name="help_data_backup">How do I backup my data?</string>
    <string name="help_intro">With PRIVACY FRIENDLY QR Scanner you can scan barcodes and qr-codes with various contents.</string>
    <string name="help_overview_heading">What is PRIVACY FRIENDLY QR Scanner?</string>
    <string name="help_permission1_description">The app requires the camera permission, which is used to scan barcodes and qr codes via camera.</string>
    <string name="help_permission1_heading">Camera</string>
    <string name="help_privacy_heading">What permissions are required by PRIVACY FRIENDLY QR Scanner?</string>
    <string name="history">History</string>
    <string name="lastname">Lastname</string>
    <string name="lib_url"><a href="https://github.com/zxing">ZXing</a></string>
    <string name="more_info">More information can be found on:</string>
    <string name="phone_number">Phone number</string>
    <string name="pref_app_theme_default">SYSTEM</string>
    <string name="pref_app_theme_title">Theme</string>
    <string name="pref_custom_search_engine_default">https://duckduckgo.com/?q=%s</string>
    <string name="pref_custom_search_engine_summary">The URL to use as \"Custom Search Engine\". The search string will be inserted at %s.</string>
    <string name="pref_custom_search_engine_title">Custom Search Engine</string>
    <string name="pref_description_enable_history">Previous scans are logged for you to show them again</string>
    <string name="pref_description_silent_scan">Only save scan to history and continue scanning</string>
    <string name="pref_enable_beep_on_scan_summary">Play a confirmation tone when scanning</string>
    <string name="pref_enable_beep_on_scan_title">Beep on scan</string>
    <string name="pref_save_real_image_to_history_summary">Saves a real image of the code instead of a recreation</string>
    <string name="pref_save_real_image_to_history_title">Save real code</string>
    <string name="pref_search_engine_default">DUCK_DUCK_GO</string>
    <string name="pref_search_engine_enabled_summary">Display the \"Search\" button when scanning text.</string>
    <string name="pref_search_engine_enabled_title">Use search engines</string>
    <string name="pref_search_engine_title">Default Search Engine</string>
    <string name="pref_title_enable_history">Enable History</string>
    <string name="pref_title_silent_scan">Enable silent scan</string>
    <string name="privacy_friendly">This is one of many privacy-friendly apps developed by SECUSO. Source code licensed GPLv3. Images copyright Karlsruhe Institute of Technology and Google Inc.</string>
    <string name="qr_generator">QR Generator</string>
    <string name="qr_scanner">QR Scanner</string>
    <string name="settings">Settings</string>
    <string name="tutorial">Tutorial</string>
    <string name="url_secuso"><a href="https://www.secuso.org/pfa">SECUSO-Website</a></string>
    <string name="usability_hint2">If you cannot scan a code, increase the distance between the scanner and the code.</string>
    <string name="zip_code">Zip</string>
</resources>