<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference android:title="@string/pref_title_enable_history" android:key="bool_history" android:summary="@string/pref_description_enable_history" android:defaultValue="true" />
    <SwitchPreference android:title="@string/pref_title_silent_scan" android:key="pref_enable_silent_scan" android:summary="@string/pref_description_silent_scan" android:defaultValue="false" />
    <SwitchPreference android:title="@string/pref_save_real_image_to_history_title" android:key="pref_save_real_image_to_history" android:summary="@string/pref_save_real_image_to_history_summary" android:defaultValue="false" />
    <SwitchPreference android:title="@string/pref_search_engine_enabled_title" android:key="pref_search_engine_enabled" android:summary="@string/pref_search_engine_enabled_summary" android:defaultValue="true" />
    <ListPreference android:entries="@array/pref_search_engine_entries" android:title="@string/pref_search_engine_title" android:key="pref_search_engine" android:summary="%s" android:dependency="pref_search_engine_enabled" android:defaultValue="@string/pref_search_engine_default" android:entryValues="@array/pref_search_engine_values" />
    <EditTextPreference android:selectAllOnFocus="true" android:title="@string/pref_custom_search_engine_title" android:key="pref_custom_search_engine_uri" android:summary="@string/pref_custom_search_engine_summary" android:dependency="pref_search_engine_enabled" android:defaultValue="@string/pref_custom_search_engine_default" />
    <ListPreference android:entries="@array/pref_app_theme_entries" android:title="@string/pref_app_theme_title" android:key="pref_app_theme" android:summary="%s" android:defaultValue="@string/pref_app_theme_default" android:entryValues="@array/pref_app_theme_values" />
    <SwitchPreference android:title="@string/pref_enable_beep_on_scan_title" android:key="pref_enable_beep_on_scan" android:summary="@string/pref_enable_beep_on_scan_summary" android:defaultValue="false" />
</PreferenceScreen>
