<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@id/nav_group_main" android:checkableBehavior="all">
        <item android:icon="@drawable/qqr" android:id="@id/nav_scan" android:title="@string/qr_scanner" />
        <item android:icon="@drawable/gnrr" android:id="@id/nav_generate" android:title="@string/qr_generator" />
    </group>
    <group android:id="@id/nav_group_add" android:checkableBehavior="all">
        <item android:icon="@drawable/ic_action_view_as_list" android:id="@id/nav_history" android:title="@string/history" />
        <item android:icon="@drawable/ic_settings_black_48dp" android:id="@id/nav_settings" android:title="@string/settings" />
        <item android:icon="@drawable/ic_menu_tutorial" android:id="@id/nav_tutorial" android:title="@string/tutorial" />
        <item android:icon="@drawable/ic_menu_help" android:id="@id/nav_help" android:title="@string/help" />
        <item android:icon="@drawable/ic_menu_info" android:id="@id/nav_about" android:title="@string/about" />
    </group>
</menu>
