<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/main_content" android:background="?colorSurface" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:background="?colorSurface" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:fitsSystemWindows="true" android:layout_width="match_parent" android:layout_height="match_parent" android:weightSum="1.0">
        <ImageView android:id="@id/barcodeLogo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:adjustViewBounds="true" android:layout_weight="0.36" app:srcCompat="@drawable/privacyfriendlyappslogo" />
        <TextView android:layout_gravity="center_horizontal" android:id="@id/appName" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dp" android:text="@string/app_name_long" />
        <TextView android:layout_gravity="center" android:id="@id/textFieldVersionName" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dp" android:textAlignment="center" />
        <TextView android:layout_gravity="center_horizontal" android:id="@id/textFieldAuthor" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dp" android:text="@string/about_author" android:textAlignment="center" />
        <TextView android:id="@id/textFieldAuthorNames" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_author_names" android:textAlignment="center" />
        <TextView android:textStyle="bold" android:layout_gravity="center_horizontal" android:id="@id/textFieldAffiliation" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dp" android:text="@string/about_affiliation" />
        <ImageView android:id="@id/imageView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:adjustViewBounds="true" app:srcCompat="?secusoLogoDrawable" />
        <TextView android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dp" android:text="@string/privacy_friendly" />
        <TextView android:gravity="center" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dp" android:text="@string/more_info" />
        <TextView android:textStyle="bold" android:layout_gravity="center_horizontal" android:id="@id/secusoWebsite" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/url_secuso" />
        <TextView android:textStyle="bold" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/githubURL" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/github" />
        <TextView android:gravity="center" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dp" android:text="@string/about_libraries" />
        <TextView android:textStyle="bold" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/libURL" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lib_url" />
    </LinearLayout>
</ScrollView>
