<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:id="@id/scrollView" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
            <ImageView android:id="@id/imageView" android:padding="16.0dp" android:layout_width="0.0dp" android:layout_height="0.0dp" android:contentDescription="@string/activity_history_list_item_qr_image_descriptor" app:layout_constraintDimensionRatio="1:1" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
            <ProgressBar android:id="@id/progressBar" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="@id/imageView" app:layout_constraintEnd_toEndOf="@id/imageView" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/imageView" style="?android:progressBarStyle" />
            <TextView android:id="@id/textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/generated_code_image_explanation" android:textAlignment="center" app:layout_constraintBottom_toTopOf="@id/space" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/imageView" />
            <View android:id="@id/space" android:layout_width="match_parent" android:layout_height="80.0dp" app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton android:id="@id/btnClose" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dp" android:contentDescription="@string/close" android:layout_marginEnd="8.0dp" app:backgroundTint="@color/transparent" app:elevation="0.0dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" app:pressedTranslationZ="0.0dp" app:srcCompat="@drawable/ic_baseline_close_24dp" app:tint="?colorPrimaryDark" style="@style/AppTheme.Button.ExtendedFloatingActionButton.Base" />
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton android:id="@id/btnStore" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="16.0dp" android:text="@string/Store_in_gallery" android:textAllCaps="true" android:layout_marginStart="16.0dp" android:layout_marginEnd="16.0dp" app:icon="@drawable/ic_baseline_save_alt_24dp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" style="@style/AppTheme.Button.ExtendedFloatingActionButton.Base" />
</androidx.constraintlayout.widget.ConstraintLayout>
