<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/rootView" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:id="@id/scrollView" android:layout_width="match_parent" android:layout_height="0.0dp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/scrollViewContent" android:paddingBottom="80.0dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@id/guidelineStart" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_begin="32.0dp" />
            <ImageView android:id="@id/iconImageView" android:layout_width="40.0dp" android:layout_height="40.0dp" android:layout_marginTop="12.0dp" app:layout_constraintStart_toStartOf="@id/guidelineStart" app:layout_constraintTop_toTopOf="@id/editFirstnameInputLayout" app:srcCompat="@drawable/ic_person_accent_24dp" style="@style/AppTheme.Generator.Icon" />
            <ImageView android:id="@id/iconImageView2" android:layout_width="40.0dp" android:layout_height="40.0dp" android:layout_marginTop="12.0dp" app:layout_constraintStart_toStartOf="@id/guidelineStart" app:layout_constraintTop_toTopOf="@id/editPhoneInputLayout" app:srcCompat="@drawable/ic_phone_accent_24dp" style="@style/AppTheme.Generator.Icon" />
            <ImageView android:id="@id/iconImageView3" android:layout_width="40.0dp" android:layout_height="40.0dp" android:layout_marginTop="12.0dp" app:layout_constraintStart_toStartOf="@id/guidelineStart" app:layout_constraintTop_toTopOf="@id/editAddressInputLayout" app:srcCompat="@drawable/ic_address_accent_24dp" style="@style/AppTheme.Generator.Icon" />
            <ImageView android:id="@id/iconImageView4" android:layout_width="40.0dp" android:layout_height="40.0dp" android:layout_marginTop="12.0dp" app:layout_constraintStart_toStartOf="@id/guidelineStart" app:layout_constraintTop_toTopOf="@id/editMailInputLayout" app:srcCompat="@drawable/ic_email_accent_24dp" style="@style/AppTheme.Generator.Icon" />
            <androidx.constraintlayout.widget.Barrier android:id="@id/iconBarrier" android:layout_width="wrap_content" android:layout_height="wrap_content" app:barrierDirection="end" app:constraint_referenced_ids="iconImageView,iconImageView2,iconImageView3,iconImageView4" />
            <com.google.android.material.textfield.TextInputLayout android:id="@id/editFirstnameInputLayout" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_marginTop="32.0dp" android:layout_marginStart="16.0dp" android:layout_marginEnd="8.0dp" app:layout_constraintEnd_toStartOf="@id/editLastnameInputLayout" app:layout_constraintStart_toEndOf="@id/iconBarrier" app:layout_constraintTop_toTopOf="parent" style="@style/AppTheme.Generator.TextInputLayout.Dense">
                <com.google.android.material.textfield.TextInputEditText android:id="@id/editFirstname" android:nextFocusDown="@id/editLastname" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/firstname" android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout android:id="@id/editLastnameInputLayout" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_marginTop="32.0dp" android:layout_marginStart="8.0dp" android:layout_marginEnd="32.0dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/editFirstnameInputLayout" app:layout_constraintTop_toTopOf="parent" style="@style/AppTheme.Generator.TextInputLayout.Dense">
                <com.google.android.material.textfield.TextInputEditText android:id="@id/editLastname" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/lastname" android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout android:id="@id/editPhoneInputLayout" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_marginTop="16.0dp" android:layout_marginStart="16.0dp" android:layout_marginEnd="32.0dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0" app:layout_constraintStart_toEndOf="@id/iconBarrier" app:layout_constraintTop_toBottomOf="@id/editFirstnameInputLayout" style="@style/AppTheme.Generator.TextInputLayout.Dense">
                <com.google.android.material.textfield.TextInputEditText android:id="@id/editPhone" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/phone_number" android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout android:id="@id/editMailInputLayout" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_marginTop="16.0dp" android:layout_marginStart="16.0dp" android:layout_marginEnd="32.0dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0" app:layout_constraintStart_toEndOf="@id/iconBarrier" app:layout_constraintTop_toBottomOf="@id/editPhoneInputLayout" style="@style/AppTheme.Generator.TextInputLayout.Dense">
                <com.google.android.material.textfield.TextInputEditText android:id="@id/editMail" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/e_mail_address" android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout android:id="@id/editAddressInputLayout" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_marginTop="16.0dp" android:layout_marginStart="16.0dp" android:layout_marginEnd="32.0dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0" app:layout_constraintStart_toEndOf="@id/iconBarrier" app:layout_constraintTop_toBottomOf="@id/editMailInputLayout" style="@style/AppTheme.Generator.TextInputLayout.Dense">
                <com.google.android.material.textfield.TextInputEditText android:id="@id/editAddress" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/address" android:inputType="textPostalAddress" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout android:id="@id/editCityInputLayout" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_marginTop="16.0dp" android:layout_marginStart="16.0dp" android:layout_marginEnd="8.0dp" app:layout_constraintEnd_toStartOf="@id/editZipCodeInputLayout" app:layout_constraintHorizontal_bias="1.0" app:layout_constraintStart_toEndOf="@id/iconBarrier" app:layout_constraintTop_toBottomOf="@id/editAddressInputLayout" style="@style/AppTheme.Generator.TextInputLayout.Dense">
                <com.google.android.material.textfield.TextInputEditText android:id="@id/editCity" android:nextFocusDown="@id/editZipCode" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/city" android:inputType="textPostalAddress" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout android:id="@id/editZipCodeInputLayout" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dp" android:layout_marginStart="8.0dp" android:layout_marginEnd="32.0dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0" app:layout_constraintStart_toEndOf="@id/editCityInputLayout" app:layout_constraintTop_toBottomOf="@id/editAddressInputLayout" style="@style/AppTheme.Generator.TextInputLayout.Dense">
                <com.google.android.material.textfield.TextInputEditText android:id="@id/editZipCode" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/zip_code" android:minEms="5" android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton android:id="@id/btnGenerate" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="16.0dp" android:layout_marginStart="16.0dp" android:layout_marginEnd="16.0dp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" style="@style/AppTheme.Button.GenerateButton" />
</androidx.constraintlayout.widget.ConstraintLayout>
